# pymcp

./: .env.example  README.md  main.py  pyproject.toml
src/mcp_server/: __init__.py  sum_int.py
tests/: test_sum_int.py  test_sum_int_by_llm.py  test_sum_int_with_agent.py  test_sum_int_with_agent_sse.py  test_sum_int_with_agent_streamable_http.py  test_sum_int_with_real_llm.py
